test/gen/g041.go2
// errorcheck

// Copyright 2020 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

// Issue 40015.
package p

func F1[](s []int) {} // ERROR "empty type parameter list"

func F2() { F1([]int{1, 2}) }
